--- a/3-databases/6.Query_processing.md
+++ b/3-databases/6.Query_processing.md
@@ -1,4 +1,4 @@
-(**StrataScratch**)[https://platform.stratascratch.com/coding?code_type=1] - сайт де можна практикуватись в SQL
+[**StrataScratch**](https://platform.stratascratch.com/coding?code_type=1) - сайт де можна практикуватись в SQL
 
 # Основні операції реляційної алгебри
 **Реляційна алгебра** - це формальна система для маніпуляції реляційними даними, яка забезпечує основу для SQL-запитів. Вона включає в себе набір операцій для вибору та об'єднання даних з таблиць (відносин).
